# cppts

./: .gitignore  CMakeLists.txt  README.md
cmake/: utils.cmake
cppts/core/: exceptions.hpp  units_processing_machine.hpp
cppts/core/builders/: block_builder.hpp  task_proxy_scheduler_builder.hpp  task_scheduler_base_builder.hpp  task_scheduler_base_builder_impl.hpp  task_scheduler_builder.hpp
cppts/core/containers/: containers.hpp  forming_blocks_container.hpp  processable_blocks_container.hpp  processes_container.hpp  registered_triggers_container.hpp
cppts/core/logger/: default_logger.hpp  logger.hpp  logger_base.hpp  logging_type.hpp
cppts/core/schedulers/: names_formatter.hpp  task_proxy_scheduler.hpp  task_scheduler.hpp  task_scheduler_base.hpp  task_scheduler_parameters.hpp  task_scheduler_utility.hpp
cppts/core/units/: block_composite.hpp  task_executer.hpp  task_leaf.hpp  unit_processable.hpp
cppts/cppts/: cppts.hpp
cppts/func_objects/switcher/: basic_switcher.hpp  switcher.hpp  switcher_state_provider.hpp
cppts/func_objects/task/: task.hpp  task_arguments_container.hpp  task_base.hpp  task_default.hpp  task_execution_context.hpp  task_info.hpp  task_types.hpp
cppts/func_objects/task/builders/: task_builder.hpp  task_builder_base.hpp  task_builder_base_impl.hpp  task_builders.hpp  task_custom_builder.hpp  task_default_builder.hpp
cppts/func_objects/task/state/: task_state.hpp  task_state_provider.hpp  task_state_provider_impl.hpp  task_state_type.hpp
cppts/func_objects/trigger/: trigger.hpp  trigger_condition.hpp  trigger_info.hpp  trigger_state.hpp  trigger_status_type.hpp
cppts/func_objects/trigger/builders/: trigger_builder.hpp
cppts/func_objects/trigger/conditions/: conditions.hpp  dependency_condition.hpp  periodicity_condition.hpp  periodicity_condition_impl.hpp  predicate_condition.hpp  repetitions_condition.hpp
cppts/tools/: data_stream.hpp  generator.hpp  generator_impl.hpp  processor_base.hpp  processor_base_impl.hpp
examples/: CMakeLists.txt  custom_task.cpp  proxy_scheduler_usage.cpp  simple_task.cpp
examples/logger/: console_logger.hpp
src/core/: exceptions.cpp  units_processing_machine.cpp
src/core/builders/: block_builder.cpp  task_proxy_scheduler_builder.cpp  task_scheduler_builder.cpp
src/core/containers/: forming_blocks_container.cpp  processable_blocks_container.cpp  processes_container.cpp  registered_triggers_container.cpp
src/core/logger/: default_logger.cpp  logger.cpp
src/core/schedulers/: names_formatter.cpp  task_proxy_scheduler.cpp  task_scheduler.cpp  task_scheduler_base.cpp
src/core/units/: block_composite.cpp  task_executer.cpp  task_leaf.cpp  unit_processable.cpp
src/switcher/: basic_switcher.cpp  switcher.cpp
src/task/: task_arguments_container.cpp  task_default.cpp  task_default_builder.cpp  task_state.cpp
src/tools/: data_stream.cpp
src/trigger/: dependency_condition.cpp  predicate_condition.cpp  repetitions_condition.cpp  trigger.cpp  trigger_builder.cpp  trigger_info.cpp  trigger_state.cpp
tests/: CMakeLists.txt  simple_tests.cpp
